multi page update

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <script src="https://kit.fontawesome.com/d972c1f784.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
+    <title>Lancers HQ</title>
 </head>
 
 <body>
@@ -18,19 +19,19 @@
         <li class="logo">Lancers HQ</li>
         <li><a href="index.html">Home</a></li>
         <li>
-            <a href="#">Products ▼</a>
+            <span>Products ▼</span>
             <ul class="dropdown">
                 <li><a href="core_set.html">Core Boxes</a></li>
-                <li><a href="#">Deck Builders</a></li>
-                <li><a href="#">Singles</a></li>
-                <li><a href="#">Accessories</a></li>
+                <li><a href="db.html">Deck Builders</a></li>
+                <li><a href="singles.html">Singles</a></li>
+                <li><a href="accessory.html">Accessories</a></li>
             </ul>
         </li>
         <li>
-            <a href="">Community ▼</a>
+            <span>Community ▼</span>
             <ul class="dropdown">
-                <li><a href="#">Tournaments</a></li>
-                <li><a href="#">Deck List</a></li>
+                <li><a href="tourna.html">Tournaments</a></li>
+                <li><a href="decklist.html">Deck List</a></li>
             </ul>
         </li>
     </ul>
@@ -97,7 +98,7 @@
                     <div class="card-overlay">
                         <div class="card-text">Keep your cards in pristine condition and showcase your dueling style
                             with our range of Accessories.
-                            <button>Accessories</button>
+                            <button onclick="document.location=''">Accessories</button>
                         </div>
                     </div>
                 </div>
