--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     <div class="card-overlay">
                         <div class="card-text">Dive into the heart of Yu-Gi-Oh! with our Core Sets, featuring the latest
                             and most essential cards that every duelist needs.
-                            <button>Core Boxes</button>
+                            <button onclick="document.location='https://marnonymous792.github.io/html--project/core_set.html'">Core Boxes</button>
                         </div>
 
                     </div>
@@ -80,7 +80,7 @@
                     <img src="./images/dbpack.jpeg" alt="">
                     <div class="card-overlay">
                         <div class="card-text">Take your strategy to the next level with our Deck Builders.
-                            <button>Deck Builders</button>
+                            <button onclick="document.location='https://marnonymous792.github.io/html--project/db.html'">Deck Builders</button>
                         </div>
                     </div>
                 </div>
@@ -89,7 +89,7 @@
                     <div class="card-overlay">
                         <div class="card-text">Looking for that one specific card to complete your deck? Our Singles
                             collection is here for you.
-                            <button>Singles</button>
+                            <button onclick="document.location='https://marnonymous792.github.io/html--project/singles.html'">Singles</button>
                         </div>
                     </div>
                 </div>
@@ -98,7 +98,7 @@
                     <div class="card-overlay">
                         <div class="card-text">Keep your cards in pristine condition and showcase your dueling style
                             with our range of Accessories.
-                            <button onclick="document.location=''">Accessories</button>
+                            <button onclick="document.location='https://marnonymous792.github.io/html--project/accessory.html'">Accessories</button>
                         </div>
                     </div>
                 </div>
