fixed links; added tourna page

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 Join us at Lancers, where the heart of Yu-Gi-Oh! beats strong. Let's duel!
             </p>
             <br>
-            <button>Learn More</button>
+            <button onclick="document.location='https://marnonymous792.github.io/html--project/about.html'">Learn More</button>
         </div>
     </div>
 
