core_set update scroll bar style card box changes

--- a/core_set.html
+++ b/core_set.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,6 +13,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Core Set</title>
 </head>
+
 <body>
     <ul class="navbar">
         <li class="logo">Lancers HQ</li>
@@ -33,7 +35,104 @@
             </ul>
         </li>
     </ul>
-    
+    <div class="article">
+        <h1>Yu-Gi-Oh Core Booster Set Series 12</h1>
+        <div class="product-contain">
+
+            <div class="card">
+                <img src="./images/core-set/dune-box.jpg" alt="">
+                <div class="card-overlay">
+                    <div class="card-text">
+                        <h4>Duelist Nexus</h4>
+                    </div>
+                    <div class="icons">
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-solid fa-cart-plus"></i>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card">
+                <img src="./images/core-set/agov-box.jpeg" alt="">
+                <div class="card-overlay">
+                    <div class="card-text">
+                        <h4>Age of Overlord</h4>
+                    </div>
+                    <div class="icons">
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-solid fa-cart-plus"></i>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card">
+                <img src="./images/core-set/phni-box.webp" alt="">
+                <div class="card-overlay">
+                    <div class="card-text">
+                        <h4>Phantom Nightmare</h4>
+                    </div>
+                    <div class="icons">
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-solid fa-cart-plus"></i>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card">
+                <img src="./images/core-set/lede-box.jpeg" alt="">
+                <div class="card-overlay">
+                    <div class="card-text">
+                        <h4>Legacy of Destruction</h4>
+                    </div>
+                    <div class="icons">
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-solid fa-cart-plus"></i>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card">
+                <img src="./images/core-set/info-box.jpg" alt="">
+                <div class="card-overlay">
+                    <div class="card-text">
+                        <h4>Infinite Forbidden</h4>
+                    </div>
+                    <div class="icons">
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-solid fa-cart-plus"></i>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card">
+                <img src="./images/core-set/rota-box.jpg" alt="">
+                <div class="card-overlay">
+                    <div class="card-text">
+                        <h4>Rage of the Abyss</h4>
+                    </div>
+                    <div class="icons">
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-solid fa-cart-plus"></i>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card">
+                <img src="./images/core-set/suda-box.jpg" alt="">
+                <div class="card-overlay">
+                    <div class="card-text">
+                        <h4>Supreme Darkness</h4>
+                    </div>
+                    <div class="icons">
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-solid fa-cart-plus"></i>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
     <div class="footer">
         <div class="footer-content">
             <div>
@@ -51,8 +150,12 @@
     </div>
 
     <div class="copyright">
-        <p>Lancers is a fan-driven Yu-Gi-Oh! store and community. We are not officially affiliated with Konami Digital Entertainment.
+        <p>Lancers is a fan-driven Yu-Gi-Oh! store and community. We are not officially affiliated with Konami Digital
+            Entertainment.
             © Developed by <a href="about-dev.html">MarNonymous792</a></p>
     </div>
+
+
 </body>
+
 </html>
