series 11 added to core set

--- a/core_set.html
+++ b/core_set.html
@@ -131,6 +131,169 @@
             </div>
 
         </div>
+
+        <!-- series 11 -->
+        <h1>Yu-Gi-Oh Core Booster Set Series 11</h1>
+        <div class="product-contain">
+
+            <div class="card">
+                <img src="./images/core-set/ROTD_box.jpg" alt="">
+                <div class="card-overlay">
+                    <div class="card-text">
+                        <h4>Rise of the Duelist</h4>
+                    </div>
+                    <div class="icons">
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-solid fa-cart-plus"></i>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card">
+                <img src="./images/core-set/phra-box.jpeg" alt="">
+                <div class="card-overlay">
+                    <div class="card-text">
+                        <h4>Phantom Rage</h4>
+                    </div>
+                    <div class="icons">
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-solid fa-cart-plus"></i>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card">
+                <img src="./images/core-set/blvo-box.jpeg" alt="">
+                <div class="card-overlay">
+                    <div class="card-text">
+                        <h4>Blazing Vortex</h4>
+                    </div>
+                    <div class="icons">
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-solid fa-cart-plus"></i>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card">
+                <img src="./images/core-set/liov-box.webp" alt="">
+                <div class="card-overlay">
+                    <div class="card-text">
+                        <h4>Lightning Overdrive</h4>
+                    </div>
+                    <div class="icons">
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-solid fa-cart-plus"></i>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card">
+                <img src="./images/core-set/dama-box.jpg" alt="">
+                <div class="card-overlay">
+                    <div class="card-text">
+                        <h4>Dawn of Majesty</h4>
+                    </div>
+                    <div class="icons">
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-solid fa-cart-plus"></i>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card">
+                <img src="./images/core-set/bode-box.jpeg" alt="">
+                <div class="card-overlay">
+                    <div class="card-text">
+                        <h4>Burst of Destiny</h4>
+                    </div>
+                    <div class="icons">
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-solid fa-cart-plus"></i>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card">
+                <img src="./images/core-set/bach-box.jpg" alt="">
+                <div class="card-overlay">
+                    <div class="card-text">
+                        <h4>Battle of Chaos</h4>
+                    </div>
+                    <div class="icons">
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-solid fa-cart-plus"></i>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card">
+                <img src="./images/core-set/difo-box.jpeg" alt="">
+                <div class="card-overlay">
+                    <div class="card-text">
+                        <h4>Dimension Force</h4>
+                    </div>
+                    <div class="icons">
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-solid fa-cart-plus"></i>
+                    </div>
+                </div>
+            </div>
+            
+            <div class="card">
+                <img src="./images/core-set/pota-box.jpg" alt="">
+                <div class="card-overlay">
+                    <div class="card-text">
+                        <h4>Power of the Elements</h4>
+                    </div>
+                    <div class="icons">
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-solid fa-cart-plus"></i>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card">
+                <img src="./images/core-set/dabl-box.jpeg" alt="">
+                <div class="card-overlay">
+                    <div class="card-text">
+                        <h4>Darkwing Blast</h4>
+                    </div>
+                    <div class="icons">
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-solid fa-cart-plus"></i>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card">
+                <img src="./images/core-set/phhy-box.jpeg" alt="">
+                <div class="card-overlay">
+                    <div class="card-text">
+                        <h4>Photon Hypernova</h4>
+                    </div>
+                    <div class="icons">
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-solid fa-cart-plus"></i>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card">
+                <img src="./images/core-set/cyac-box.jpeg" alt="">
+                <div class="card-overlay">
+                    <div class="card-text">
+                        <h4>Cyberstorm Access</h4>
+                    </div>
+                    <div class="icons">
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-solid fa-cart-plus"></i>
+                    </div>
+                </div>
+            </div>
+
+
+        </div>
     </div>
 
     <div class="footer">
