--- a/core_set.html
+++ b/core_set.html
@@ -254,7 +254,7 @@
                     </div>
                 </div>
             </div>
-            
+
             <div class="card">
                 <img src="./images/core-set/pota-box.jpg" alt="">
                 <div class="card-overlay">
@@ -312,6 +312,178 @@
             </div>
 
 
+        </div>
+
+        <!-- Series 10 -->
+        <h1>Yu-Gi-Oh Core Booster Set Series 10</h1>
+        <div class="product-contain">
+            <div class="card">
+                <img src="./images/core-set/cotd-box.jpg" alt="" >
+                <div class="card-overlay">
+                    <div class="card-text">
+                        <h4>Code of the Duelist</h4>
+                        <p>₱2,500</p>
+                    </div>
+                    <div class="icons">
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-solid fa-cart-plus"></i>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card">
+                <img src="./images/core-set/cibr-box.jpg" alt="">
+                <div class="card-overlay">
+                    <div class="card-text">
+                        <h4>Circuit Break</h4>
+                        <p>₱2,500</p>
+                    </div>
+                    <div class="icons">
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-solid fa-cart-plus"></i>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card">
+                <img src="./images/core-set/exfo-box.jpg" alt="">
+                <div class="card-overlay">
+                    <div class="card-text">
+                        <h4>Extreme Force</h4>
+                        <p>₱2,500</p>
+                    </div>
+                    <div class="icons">
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-solid fa-cart-plus"></i>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card">
+                <img src="./images/core-set/flod-box.jpeg" alt="">
+                <div class="card-overlay">
+                    <div class="card-text">
+                        <h4>Flames of Destruction</h4>
+                        <p>₱2,500</p>
+                    </div>
+                    <div class="icons">
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-solid fa-cart-plus"></i>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card">
+                <img src="./images/core-set/cyho-box.png" alt="">
+                <div class="card-overlay">
+                    <div class="card-text">
+                        <h4>Cybernetic Horizon</h4>
+                        <p>₱2,500</p>
+                    </div>
+                    <div class="icons">
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-solid fa-cart-plus"></i>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card">
+                <img src="./images/core-set/sofu-box.jpg" alt="">
+                <div class="card-overlay">
+                    <div class="card-text">
+                        <h4>Soul Fusion</h4>
+                        <p>₱2,500</p>
+                    </div>
+                    <div class="icons">
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-solid fa-cart-plus"></i>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card">
+                <img src="./images/core-set/sast-box.webp" alt="">
+                <div class="card-overlay">
+                    <div class="card-text">
+                        <h4>Savage Strike</h4>
+                        <p>₱2,500</p>
+                    </div>
+                    <div class="icons">
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-solid fa-cart-plus"></i>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card">
+                <img src="./images/core-set/dane-box.jpg" alt="">
+                <div class="card-overlay">
+                    <div class="card-text">
+                        <h4>Dark Neostorm</h4>
+                        <p>₱2,500</p>
+                    </div>
+                    <div class="icons">
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-solid fa-cart-plus"></i>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card">
+                <img src="./images/core-set/rira-box.jpg" alt="">
+                <div class="card-overlay">
+                    <div class="card-text">
+                        <h4>Rising Rampage</h4>
+                        <p>₱2,500</p>
+                    </div>
+                    <div class="icons">
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-solid fa-cart-plus"></i>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card">
+                <img src="./images/core-set/chim-box.jpg" alt="">
+                <div class="card-overlay">
+                    <div class="card-text">
+                        <h4>Chaos Impact</h4>
+                        <p>₱2,500</p>
+                    </div>
+                    <div class="icons">
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-solid fa-cart-plus"></i>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card">
+                <img src="./images/core-set/igas-box.jpg" alt="">
+                <div class="card-overlay">
+                    <div class="card-text">
+                        <h4>Ignition Assault</h4>
+                        <p>₱2,500</p>
+                    </div>
+                    <div class="icons">
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-solid fa-cart-plus"></i>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card">
+                <img src="./images/core-set/etco-box.jpg" alt="">
+                <div class="card-overlay">
+                    <div class="card-text">
+                        <h4>Eternity Code</h4>
+                        <p>₱2,500</p>
+                    </div>
+                    <div class="icons">
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-solid fa-cart-plus"></i>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
