about page added

--- a/about.html
+++ b/about.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,6 +13,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Lancers HQ</title>
 </head>
+
 <body>
     <ul class="navbar">
         <li class="logo">Lancers HQ</li>
@@ -33,7 +35,64 @@
             </ul>
         </li>
     </ul>
-    
+    <div id="about">
+        <h1>Lancers HQ</h1>
+        <br>
+        <p>
+            Welcome to Lancers HQ! We are a passionate small business based in Cebu, dedicated to bringing the
+            excitement of Yu-Gi-Oh! to our community. Located near the University of Cebu, our main headquarters is
+            where our love for the game comes to life.
+        </p>
+        <br>
+        <p>
+            At Lancers HQ, we strive to foster a supportive and engaging community through tutorials, discussions,
+            gameplay showcases, and live duels. Our goal is to share the thrill of the game, one duel at a time, while
+            inspiring others to join the fun. We're passionate about Yu-Gi-Oh! and committed to helping others develop
+            their skills, form friendships, and enjoy this incredible hobby to its fullest.
+        </p>
+        <br>
+        <p>
+            Join us at Lancers, where the heart of Yu-Gi-Oh! beats strong. Let's duel!
+        </p>
+    </div>
+
+    <div id="mission">
+        <div class="mission-img"></div>
+        <div class="content">
+            <h1>Mission</h1>
+            <p>
+                At Lancers HQ, our mission is to share our beloved hobby with others and invite new players into the
+                exciting world of Yu-Gi-Oh! We are dedicated to creating an inviting and welcoming community where
+                players of all skill levels can feel at home.
+            </p>
+            <p>
+                We strive to play with fellow duelists, fostering friendships and encouraging the growth of the
+                community. By sharing strategies, hosting duels, and providing support to players both new and
+                experienced, we aim to help every duelist enhance their skills and passion for the game. Our goal is not
+                only to grow as players ourselves but also to contribute to the overall growth and spirit of the
+                Yu-Gi-Oh! community.
+            </p>
+        </div>
+    </div>
+    <div id="vision">
+        <div class="vision-img"></div>
+        <div class="content">
+            <h1>Vision</h1>
+            <p>
+                At Lancers HQ, our vision is to create a large and vibrant community where duelists from all walks of
+                life can come together to share their love for Yu-Gi-Oh! and engage in friendly competition. We aspire
+                to become a hub for passionate players, where camaraderie, skill-building, and a shared love for the
+                game flourish.
+            </p>
+            <p>
+                Our long-term goal is to grow into a thriving community that not only connects duelists locally but also
+                competes at the national, regional, and even international levels. We aim to nurture talent, promote
+                healthy competition, and establish a presence in major Yu-Gi-Oh! events, all while maintaining the
+                inclusive and welcoming spirit of Lancers HQ.
+            </p>
+        </div>
+    </div>
+
     <div class="footer">
         <div class="footer-content">
             <div>
@@ -51,8 +110,10 @@
     </div>
 
     <div class="copyright">
-        <p>Lancers is a fan-driven Yu-Gi-Oh! store and community. We are not officially affiliated with Konami Digital Entertainment.
+        <p>Lancers is a fan-driven Yu-Gi-Oh! store and community. We are not officially affiliated with Konami Digital
+            Entertainment.
             © Developed by <a href="about-dev.html">MarNonymous792</a></p>
     </div>
 </body>
+
 </html>
