--- a/core_set.html
+++ b/core_set.html
@@ -47,8 +47,8 @@
                         <p>₱2,999</p>
                     </div>
                     <div class="icons">
-                        <i class="fa-regular fa-star"></i>
-                        <i class="fa-solid fa-cart-plus"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-cart-shopping"></i>
                     </div>
                 </div>
             </div>
@@ -61,8 +61,8 @@
                         <p>₱3,200</p>
                     </div>
                     <div class="icons">
-                        <i class="fa-regular fa-star"></i>
-                        <i class="fa-solid fa-cart-plus"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-cart-shopping"></i>
                     </div>
                 </div>
             </div>
@@ -75,8 +75,8 @@
                         <p>₱3,200</p>
                     </div>
                     <div class="icons">
-                        <i class="fa-regular fa-star"></i>
-                        <i class="fa-solid fa-cart-plus"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-cart-shopping"></i>
                     </div>
                 </div>
             </div>
@@ -89,8 +89,8 @@
                         <p>₱2,899</p>
                     </div>
                     <div class="icons">
-                        <i class="fa-regular fa-star"></i>
-                        <i class="fa-solid fa-cart-plus"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-cart-shopping"></i>
                     </div>
                 </div>
             </div>
@@ -103,8 +103,8 @@
                         <p>₱3,200</p>
                     </div>
                     <div class="icons">
-                        <i class="fa-regular fa-star"></i>
-                        <i class="fa-solid fa-cart-plus"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-cart-shopping"></i>
                     </div>
                 </div>
             </div>
@@ -117,8 +117,8 @@
                         <p>₱2,950</p>
                     </div>
                     <div class="icons">
-                        <i class="fa-regular fa-star"></i>
-                        <i class="fa-solid fa-cart-plus"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-cart-shopping"></i>
                     </div>
                 </div>
             </div>
@@ -131,8 +131,8 @@
                         <p>₱3,200</p>
                     </div>
                     <div class="icons">
-                        <i class="fa-regular fa-star"></i>
-                        <i class="fa-solid fa-cart-plus"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-cart-shopping"></i>
                     </div>
                 </div>
             </div>
@@ -151,8 +151,8 @@
                         <p>₱1,800</p>
                     </div>
                     <div class="icons">
-                        <i class="fa-regular fa-star"></i>
-                        <i class="fa-solid fa-cart-plus"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-cart-shopping"></i>
                     </div>
                 </div>
             </div>
@@ -165,8 +165,8 @@
                         <p>₱3,200</p>
                     </div>
                     <div class="icons">
-                        <i class="fa-regular fa-star"></i>
-                        <i class="fa-solid fa-cart-plus"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-cart-shopping"></i>
                     </div>
                 </div>
             </div>
@@ -179,8 +179,8 @@
                         <p>₱3,200</p>
                     </div>
                     <div class="icons">
-                        <i class="fa-regular fa-star"></i>
-                        <i class="fa-solid fa-cart-plus"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-cart-shopping"></i>
                     </div>
                 </div>
             </div>
@@ -193,8 +193,8 @@
                         <p>₱2,800</p>
                     </div>
                     <div class="icons">
-                        <i class="fa-regular fa-star"></i>
-                        <i class="fa-solid fa-cart-plus"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-cart-shopping"></i>
                     </div>
                 </div>
             </div>
@@ -207,8 +207,8 @@
                         <p>₱3,200</p>
                     </div>
                     <div class="icons">
-                        <i class="fa-regular fa-star"></i>
-                        <i class="fa-solid fa-cart-plus"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-cart-shopping"></i>
                     </div>
                 </div>
             </div>
@@ -221,8 +221,8 @@
                         <p>₱3,200</p>
                     </div>
                     <div class="icons">
-                        <i class="fa-regular fa-star"></i>
-                        <i class="fa-solid fa-cart-plus"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-cart-shopping"></i>
                     </div>
                 </div>
             </div>
@@ -235,8 +235,8 @@
                         <p>₱2,800</p>
                     </div>
                     <div class="icons">
-                        <i class="fa-regular fa-star"></i>
-                        <i class="fa-solid fa-cart-plus"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-cart-shopping"></i>
                     </div>
                 </div>
             </div>
@@ -249,8 +249,8 @@
                         <p>₱2,164</p>
                     </div>
                     <div class="icons">
-                        <i class="fa-regular fa-star"></i>
-                        <i class="fa-solid fa-cart-plus"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-cart-shopping"></i>
                     </div>
                 </div>
             </div>
@@ -263,8 +263,8 @@
                         <p>₱2,490</p>
                     </div>
                     <div class="icons">
-                        <i class="fa-regular fa-star"></i>
-                        <i class="fa-solid fa-cart-plus"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-cart-shopping"></i>
                     </div>
                 </div>
             </div>
@@ -277,8 +277,8 @@
                         <p>₱2,912</p>
                     </div>
                     <div class="icons">
-                        <i class="fa-regular fa-star"></i>
-                        <i class="fa-solid fa-cart-plus"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-cart-shopping"></i>
                     </div>
                 </div>
             </div>
@@ -291,8 +291,8 @@
                         <p>₱2,599</p>
                     </div>
                     <div class="icons">
-                        <i class="fa-regular fa-star"></i>
-                        <i class="fa-solid fa-cart-plus"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-cart-shopping"></i>
                     </div>
                 </div>
             </div>
@@ -305,8 +305,8 @@
                         <p>₱2,599</p>
                     </div>
                     <div class="icons">
-                        <i class="fa-regular fa-star"></i>
-                        <i class="fa-solid fa-cart-plus"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-cart-shopping"></i>
                     </div>
                 </div>
             </div>
@@ -325,8 +325,8 @@
                         <p>₱2,500</p>
                     </div>
                     <div class="icons">
-                        <i class="fa-regular fa-star"></i>
-                        <i class="fa-solid fa-cart-plus"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-cart-shopping"></i>
                     </div>
                 </div>
             </div>
@@ -339,8 +339,8 @@
                         <p>₱2,500</p>
                     </div>
                     <div class="icons">
-                        <i class="fa-regular fa-star"></i>
-                        <i class="fa-solid fa-cart-plus"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-cart-shopping"></i>
                     </div>
                 </div>
             </div>
@@ -353,8 +353,8 @@
                         <p>₱2,500</p>
                     </div>
                     <div class="icons">
-                        <i class="fa-regular fa-star"></i>
-                        <i class="fa-solid fa-cart-plus"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-cart-shopping"></i>
                     </div>
                 </div>
             </div>
@@ -367,8 +367,8 @@
                         <p>₱2,500</p>
                     </div>
                     <div class="icons">
-                        <i class="fa-regular fa-star"></i>
-                        <i class="fa-solid fa-cart-plus"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-cart-shopping"></i>
                     </div>
                 </div>
             </div>
@@ -381,8 +381,8 @@
                         <p>₱2,500</p>
                     </div>
                     <div class="icons">
-                        <i class="fa-regular fa-star"></i>
-                        <i class="fa-solid fa-cart-plus"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-cart-shopping"></i>
                     </div>
                 </div>
             </div>
@@ -395,8 +395,8 @@
                         <p>₱2,500</p>
                     </div>
                     <div class="icons">
-                        <i class="fa-regular fa-star"></i>
-                        <i class="fa-solid fa-cart-plus"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-cart-shopping"></i>
                     </div>
                 </div>
             </div>
@@ -409,8 +409,8 @@
                         <p>₱2,500</p>
                     </div>
                     <div class="icons">
-                        <i class="fa-regular fa-star"></i>
-                        <i class="fa-solid fa-cart-plus"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-cart-shopping"></i>
                     </div>
                 </div>
             </div>
@@ -423,8 +423,8 @@
                         <p>₱2,500</p>
                     </div>
                     <div class="icons">
-                        <i class="fa-regular fa-star"></i>
-                        <i class="fa-solid fa-cart-plus"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-cart-shopping"></i>
                     </div>
                 </div>
             </div>
@@ -437,8 +437,8 @@
                         <p>₱2,500</p>
                     </div>
                     <div class="icons">
-                        <i class="fa-regular fa-star"></i>
-                        <i class="fa-solid fa-cart-plus"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-cart-shopping"></i>
                     </div>
                 </div>
             </div>
@@ -451,8 +451,8 @@
                         <p>₱2,500</p>
                     </div>
                     <div class="icons">
-                        <i class="fa-regular fa-star"></i>
-                        <i class="fa-solid fa-cart-plus"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-cart-shopping"></i>
                     </div>
                 </div>
             </div>
@@ -465,8 +465,8 @@
                         <p>₱2,500</p>
                     </div>
                     <div class="icons">
-                        <i class="fa-regular fa-star"></i>
-                        <i class="fa-solid fa-cart-plus"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-cart-shopping"></i>
                     </div>
                 </div>
             </div>
@@ -479,8 +479,8 @@
                         <p>₱2,500</p>
                     </div>
                     <div class="icons">
-                        <i class="fa-regular fa-star"></i>
-                        <i class="fa-solid fa-cart-plus"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-cart-shopping"></i>
                     </div>
                 </div>
             </div>
