--- a/singles.html
+++ b/singles.html
@@ -34,6 +34,13 @@
         </li>
     </ul>
     
+    <div class="article">
+        <h1>Rarity Collection Premium Gold Edition</h1>
+
+        
+    </div>
+
+
     <div class="footer">
         <div class="footer-content">
             <div>
