singles content added

--- a/singles.html
+++ b/singles.html
@@ -37,7 +37,257 @@
     <div class="article">
         <h1>Rarity Collection Premium Gold Edition</h1>
 
-        
+        <h2 class="title">Secret Rare</h2>
+        <div class="product-contain"> 
+            <div class="c">
+                <img src="./images/RC03/SE/10003.jpg" alt="">
+                <p class="name">Gren Maju Da Eiza</p>
+                <p class="price">₱90</p>
+
+                <div class="c-icons">
+                    <a href="./images/RC03/SE/10003.jpg" target="_blank"><i class="fa-solid fa-magnifying-glass"></i></a>
+                    <i class="fa-solid fa-heart"></i>
+                    <i class="fa-solid fa-cart-shopping"></i>
+                </div>
+            </div>
+            <div class="c">
+                <img src="./images/RC03/SE/10006.jpg" alt="">
+                <p class="name">Armageddon Knight</p>
+                <p class="price">₱90</p>
+
+                <div class="c-icons">
+                    <a href="./images/RC03/SE/10006.jpg" target="_blank"><i class="fa-solid fa-magnifying-glass"></i></a>
+                    <i class="fa-solid fa-heart"></i>
+                    <i class="fa-solid fa-cart-shopping"></i>
+                </div>
+            </div>
+            <div class="c">
+                <img src="./images/RC03/SE/10009.jpg" alt="">
+                <p class="name">Swap Frog</p>
+                <p class="price">₱110</p>
+
+                <div class="c-icons">
+                    <a href="./images/RC03/SE//10009.jpg" target="_blank"><i class="fa-solid fa-magnifying-glass"></i></a>
+                    <i class="fa-solid fa-heart"></i>
+                    <i class="fa-solid fa-cart-shopping"></i>
+                </div>
+            </div>
+            <div class="c">
+                <img src="./images/RC03/SE/10012.jpg" alt="">
+                <p class="name">Maxx "C"</p>
+                <p class="price">₱340</p>
+
+                <div class="c-icons">
+                    <a href="./images/RC03/SE/10012.jpg" target="_blank"><i class="fa-solid fa-magnifying-glass"></i></a>
+                    <i class="fa-solid fa-heart"></i>
+                    <i class="fa-solid fa-cart-shopping"></i>
+                </div>
+            </div>
+
+            <div class="c">
+                <img src="./images/RC03/SE/10015.jpg" alt="">
+                <p class="name">Tour Guide From the Underworld (alternate art)</p>
+                <p class="price">₱60</p>
+
+                <div class="c-icons">
+                    <a href="./images/RC03/SE/10015.jpg" target="_blank"><i class="fa-solid fa-magnifying-glass"></i></a>
+                    <i class="fa-solid fa-heart"></i>
+                    <i class="fa-solid fa-cart-shopping"></i>
+                </div>
+            </div>
+
+            <div class="c">
+                <img src="./images/RC03/SE/10020.jpg" alt="">
+                <p class="name">Steam Synchron</p>
+                <p class="price">₱90</p>
+
+                <div class="c-icons">
+                    <a href="./images/RC03/SE/10020.jpg" target="_blank"><i class="fa-solid fa-magnifying-glass"></i></a>
+                    <i class="fa-solid fa-heart"></i>
+                    <i class="fa-solid fa-cart-shopping"></i>
+                </div>
+            </div>
+
+            <div class="c">
+                <img src="./images/RC03/SE/10023.jpg" alt="">
+                <p class="name">Ghost Ogre & Snow Rabbit (alternate art)</p>
+                <p class="price">₱340</p>
+
+                <div class="c-icons">
+                    <a href="./images/RC03/SE/10023.jpg" target="_blank"><i class="fa-solid fa-magnifying-glass"></i></a>
+                    <i class="fa-solid fa-heart"></i>
+                    <i class="fa-solid fa-cart-shopping"></i>
+                </div>
+            </div>
+
+            <div class="c">
+                <img src="./images/RC03/SE/10028.jpg" alt="">
+                <p class="name">Gameciel, the Sea Turtle Kaiju</p>
+                <p class="price">₱210</p>
+
+                <div class="c-icons">
+                    <a href="./images/RC03/SE/10028.jpg" target="_blank"><i class="fa-solid fa-magnifying-glass"></i></a>
+                    <i class="fa-solid fa-heart"></i>
+                    <i class="fa-solid fa-cart-shopping"></i>
+                </div>
+            </div>
+
+            <div class="c">
+                <img src="./images/RC03/SE/10031.jpg" alt="">
+                <p class="name">Ghost Reaper & Winter Cherries (alternate art)</p>
+                <p class="price">₱90</p>
+
+                <div class="c-icons">
+                    <a href="./images/RC03/SE/10031.jpg" target="_blank"><i class="fa-solid fa-magnifying-glass"></i></a>
+                    <i class="fa-solid fa-heart"></i>
+                    <i class="fa-solid fa-cart-shopping"></i>
+                </div>
+            </div>
+
+            <div class="c">
+                <img src="./images/RC03/SE/10036.jpg" alt="">
+                <p class="name">Ash Blossom & Joyous Spring (alternate art) </p>
+                <p class="price">₱990</p>
+
+                <div class="c-icons">
+                    <a href="./images/RC03/SE/10036.jpg" target="_blank"><i class="fa-solid fa-magnifying-glass"></i></a>
+                    <i class="fa-solid fa-heart"></i>
+                    <i class="fa-solid fa-cart-shopping"></i>
+                </div>
+            </div>
+
+            <div class="c">
+                <img src="./images/RC03/SE/10041.jpg" alt="">
+                <p class="name">White Stingray</p>
+                <p class="price">₱110</p>
+
+                <div class="c-icons">
+                    <a href="./images/RC03/SE/10041.jpg" target="_blank"><i class="fa-solid fa-magnifying-glass"></i></a>
+                    <i class="fa-solid fa-heart"></i>
+                    <i class="fa-solid fa-cart-shopping"></i>
+                </div>
+            </div>
+
+            <div class="c">
+                <img src="./images/RC03/SE/10044.jpg" alt="">
+                <p class="name">Ghost Belle & Haunted Mansion (alternate art)</p>
+                <p class="price">₱250</p>
+
+                <div class="c-icons">
+                    <a href="./images/RC03/SE/10044.jpg" target="_blank"><i class="fa-solid fa-magnifying-glass"></i></a>
+                    <i class="fa-solid fa-heart"></i>
+                    <i class="fa-solid fa-cart-shopping"></i>
+                </div>
+            </div>
+
+            <div class="c">
+                <img src="./images/RC03/SE/10049.jpg" alt="">
+                <p class="name">Dinowrestler Pankratops</p>
+                <p class="price">₱90</p>
+
+                <div class="c-icons">
+                    <a href="./images/RC03/SE/10049.jpg" target="_blank"><i class="fa-solid fa-magnifying-glass"></i></a>
+                    <i class="fa-solid fa-heart"></i>
+                    <i class="fa-solid fa-cart-shopping"></i>
+                </div>
+            </div>
+
+            <div class="c">
+                <img src="./images/RC03/SE/10052.jpg" alt="">
+                <p class="name">Chaos Dragon Levianeer (alternate art)</p>
+                <p class="price">₱90</p>
+
+                <div class="c-icons">
+                    <a href="./images/RC03/SE/10052.jpg" target="_blank"><i class="fa-solid fa-magnifying-glass"></i></a>
+                    <i class="fa-solid fa-heart"></i>
+                    <i class="fa-solid fa-cart-shopping"></i>
+                </div>
+            </div>
+
+            <div class="c">
+                <img src="./images/RC03/SE/10057.jpg" alt="">
+                <p class="name">Cyber Dragon Nachster</p>
+                <p class="price">₱90</p>
+
+                <div class="c-icons">
+                    <a href="./images/RC03/SE/10057.jpg" target="_blank"><i class="fa-solid fa-magnifying-glass"></i></a>
+                    <i class="fa-solid fa-heart"></i>
+                    <i class="fa-solid fa-cart-shopping"></i>
+                </div>
+            </div>
+
+            <div class="c">
+                <img src="./images/RC03/SE/10060.jpg" alt="">
+                <p class="name">Fantastical Dragon Phantazmay</p>
+                <p class="price">₱110</p>
+
+                <div class="c-icons">
+                    <a href="./images/RC03/SE/10060.jpg" target="_blank"><i class="fa-solid fa-magnifying-glass"></i></a>
+                    <i class="fa-solid fa-heart"></i>
+                    <i class="fa-solid fa-cart-shopping"></i>
+                </div>
+            </div>
+
+            <div class="c">
+                <img src="./images/RC03/SE/10063.jpg" alt="">
+                <p class="name">Flying Pegasus Railroad Stampede</p>
+                <p class="price">₱90</p>
+
+                <div class="c-icons">
+                    <a href="./images/RC03/SE/10063.jpg" target="_blank"><i class="fa-solid fa-magnifying-glass"></i></a>
+                    <i class="fa-solid fa-heart"></i>
+                    <i class="fa-solid fa-cart-shopping"></i>
+                </div>
+            </div>
+
+            <div class="c">
+                <img src="./images/RC03/SE/10066.jpg" alt="">
+                <p class="name">Ghost Sister & Spooky Dogwood (alternate art)</p>
+                <p class="price">₱160</p>
+
+                <div class="c-icons">
+                    <a href="./images/RC03/SE/10066.jpg" target="_blank"><i class="fa-solid fa-magnifying-glass"></i></a>
+                    <i class="fa-solid fa-heart"></i>
+                    <i class="fa-solid fa-cart-shopping"></i>
+                </div>
+            </div>
+
+            <div class="c">
+                <img src="./images/RC03/SE/10071.jpg" alt="">
+                <p class="name">Red Blossoms from Underroot</p>
+                <p class="price">₱160</p>
+
+                <div class="c-icons">
+                    <a href="./images/RC03/SE/10071.jpg" target="_blank"><i class="fa-solid fa-magnifying-glass"></i></a>
+                    <i class="fa-solid fa-heart"></i>
+                    <i class="fa-solid fa-cart-shopping"></i>
+                </div>
+            </div>
+
+            <div class="c">
+                <img src="./images/RC03/SE/10074.jpg" alt="">
+                <p class="name">Dark Magician Girl the Dragon Knight (alternate art)</p>
+                <p class="price">₱110</p>
+
+                <div class="c-icons">
+                    <a href="./images/RC03/SE/10074.jpg" target="_blank"><i class="fa-solid fa-magnifying-glass"></i></a>
+                    <i class="fa-solid fa-heart"></i>
+                    <i class="fa-solid fa-cart-shopping"></i>
+                </div>
+            </div>
+
+            <div class="c">
+                <img src="./images/RC03/SE" alt="">
+                <p class="name"></p>
+                <p class="price">₱</p>
+
+                <div class="c-icons">
+                    <a href="./images/RC03/SE" target="_blank"><i class="fa-solid fa-magnifying-glass"></i></a>
+                    <i class="fa-solid fa-heart"></i>
+                    <i class="fa-solid fa-cart-shopping"></i>
+                </div>
+            </div>
+        </div>
     </div>
 
 
