--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
         <li class="logo">Lancers HQ</li>
         <li><a href="index.html">Home</a></li>
         <li>
-            <a href="">Products ▼</a>
+            <a>Products ▼</a>
             <ul class="dropdown">
                 <li><a href="core_set.html">Core Boxes</a></li>
                 <li><a href="db.html">Deck Builders</a></li>
@@ -28,7 +28,7 @@
             </ul>
         </li>
         <li>
-            <a href="">Community ▼</a>
+            <a>Community ▼</a>
             <ul class="dropdown">
                 <li><a href="tourna.html">Tournaments</a></li>
                 <li><a href="decklist.html">Deck List</a></li>
