--- a/accessory.html
+++ b/accessory.html
@@ -17,7 +17,7 @@
         <li class="logo">Lancers HQ</li>
         <li><a href="index.html">Home</a></li>
         <li>
-            <a href="">Products ▼</a>
+            <a>Products ▼</a>
             <ul class="dropdown">
                 <li><a href="core_set.html">Core Boxes</a></li>
                 <li><a href="db.html">Deck Builders</a></li>
