accessory img resized

--- a/accessory.html
+++ b/accessory.html
@@ -41,7 +41,7 @@
         <h1>Accessories</h1>
 
         <div class="product-contain">
-            <div class="column">
+            <div class="column deckbox">
                 <h2>Deckbox</h2>
                 <div class="products">
                     <div class="product">
@@ -108,7 +108,7 @@
                     </div>
                 </div>
             </div>
-            <div class="column">
+            <div class="column sleeves">
                 <h2>Sleeves</h2>
                 <div class="products">
                     <div class="product">
@@ -468,7 +468,7 @@
                     </div>
                 </div>
             </div>
-            <div class="column">
+            <div class="column cfile">
                 <h2>Complete File Binders</h2>
 
                 <div class="products">
