--- a/tourna.html
+++ b/tourna.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,7 +12,17 @@
     <script src="https://kit.fontawesome.com/d972c1f784.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
     <title>Tournaments</title>
+
+    <style>
+        p.loc,
+        p.date {
+            color: #000;
+            text-shadow: none;
+            font-size: 0.7rem;
+        }
+    </style>
 </head>
+
 <body>
     <ul class="navbar">
         <li class="logo">Lancers HQ</li>
@@ -33,7 +44,69 @@
             </ul>
         </li>
     </ul>
-    
+
+    <div class="article">
+        <h1 class="title">Tournaments</h1>
+
+        <div class="tournaments">
+
+            <a href="#">
+                <div class="tourna">
+                    <img src="./images/tournaments/917-1.jpg" alt="">
+                    <div class="tourna-detail">
+                        <h3>Yu-Gi-Oh Open Tournament</h3>
+                        <p class="date">September 18,2022</p>
+                        <p class="loc">Play 2 Learn Discovery Toy Shop</p>
+                    </div>
+                </div>
+            </a>
+            <a href="#">
+                <div class="tourna">
+                    <img src="./images/tournaments/924-1.jpg" alt="">
+                    <div class="tourna-detail">
+                        <h3>Yu-Gi-Oh Sanctioned Tournament</h3>
+                        <p class="date">April 27, 2024</p>
+                        <p class="loc">Play 2 Learn Discovery Toy Shop</p>
+                    </div>
+                </div>
+            </a>
+
+            <a href="#">
+                <div class="tourna">
+                    <img src="./images/tournaments/618-1.jpg" alt="">
+                    <div class="tourna-detail">
+                        <h3>Yu-Gi-Oh Casual Tournament</h3>
+                        <p class="date">April 27, 2024</p>
+                        <p class="loc">Arysl Peter's Clubhouse</p>
+                    </div>
+                </div>
+            </a>
+
+            <a href="#">
+                <div class="tourna">
+                    <img src="./images/tournaments/1114-1.jpg" alt="">
+                    <div class="tourna-detail">
+                        <h3>OtakuFest 2022 Yugioh Tournament</h3>
+                        <p class="date">November 14, </p>
+                        <p class="loc">J-Center Mall, Mandaue City</p>
+                    </div>
+                </div>
+            </a>
+
+            <a href="#">
+                <div class="tourna">
+                    <img src="./images/tournaments/85-1.jpg" alt="">
+                    <div class="tourna-detail">
+                        <h3>Yugioh Day (Age of Overlord) Tournament</h3>
+                        <p class="date">August 5, 2023</p>
+                        <p class="loc">Play 2 Learn Discovery Toy Shop</p>
+                    </div>
+                </div>
+            </a>
+
+        </div>
+    </div>
+
     <div class="footer">
         <div class="footer-content">
             <div>
@@ -51,8 +124,10 @@
     </div>
 
     <div class="copyright">
-        <p>Lancers is a fan-driven Yu-Gi-Oh! store and community. We are not officially affiliated with Konami Digital Entertainment.
+        <p>Lancers is a fan-driven Yu-Gi-Oh! store and community. We are not officially affiliated with Konami Digital
+            Entertainment.
             © Developed by <a href="about-dev.html">MarNonymous792</a></p>
     </div>
 </body>
+
 </html>
