--- a/tourna.html
+++ b/tourna.html
@@ -50,7 +50,7 @@
 
         <div class="tournaments">
 
-            <a href="#">
+            <a href="./tourna-sep18.html">
                 <div class="tourna">
                     <img src="./images/tournaments/917-1.jpg" alt="">
                     <div class="tourna-detail">
@@ -60,7 +60,7 @@
                     </div>
                 </div>
             </a>
-            <a href="#">
+            <a href="./tourna-apr27.html">
                 <div class="tourna">
                     <img src="./images/tournaments/924-1.jpg" alt="">
                     <div class="tourna-detail">
@@ -71,18 +71,18 @@
                 </div>
             </a>
 
-            <a href="#">
+            <a href="./tourna-jun18.html">
                 <div class="tourna">
                     <img src="./images/tournaments/618-1.jpg" alt="">
                     <div class="tourna-detail">
                         <h3>Yu-Gi-Oh Casual Tournament</h3>
-                        <p class="date">April 27, 2024</p>
+                        <p class="date">June 18, 2022</p>
                         <p class="loc">Arysl Peter's Clubhouse</p>
                     </div>
                 </div>
             </a>
 
-            <a href="#">
+            <a href="./tourna-1114.html">
                 <div class="tourna">
                     <img src="./images/tournaments/1114-1.jpg" alt="">
                     <div class="tourna-detail">
@@ -93,7 +93,7 @@
                 </div>
             </a>
 
-            <a href="#">
+            <a href="./tourna-aug5.html">
                 <div class="tourna">
                     <img src="./images/tournaments/85-1.jpg" alt="">
                     <div class="tourna-detail">
