update content and styles

--- a/decklist.html
+++ b/decklist.html
@@ -86,13 +86,12 @@
         <h1 class="title">Deck Lists</h1>
         <div class="decklist">
            
-            <a href=""><div class="deck">
+            <a href="./decklists/deck-1.html"><div class="deck">
                 <img src="./Arc_V_Lancers_Selection.png" alt="">
                 <h3 class="deckname">Deck name</h3>
             </div>
             </a>
 
-            
             <a href=""><div class="deck">
                 <img src="./Arc_V_Lancers_Selection.png" alt="">
                 <h3 class="deckname">Deck name</h3>
