--- a/tourna.html
+++ b/tourna.html
@@ -50,7 +50,7 @@
 
         <div class="tournaments">
 
-            <a href="./tourna-sep18.html">
+            <a href="./tournaments/tourna-sep18.html">
                 <div class="tourna">
                     <img src="./images/tournaments/917-1.jpg" alt="">
                     <div class="tourna-detail">
@@ -60,7 +60,7 @@
                     </div>
                 </div>
             </a>
-            <a href="./tourna-apr27.html">
+            <a href="./tournaments/tourna-apr27.html">
                 <div class="tourna">
                     <img src="./images/tournaments/924-1.jpg" alt="">
                     <div class="tourna-detail">
@@ -71,7 +71,7 @@
                 </div>
             </a>
 
-            <a href="./tourna-jun18.html">
+            <a href="./tournaments/tourna-jun18.html">
                 <div class="tourna">
                     <img src="./images/tournaments/618-1.jpg" alt="">
                     <div class="tourna-detail">
@@ -82,7 +82,7 @@
                 </div>
             </a>
 
-            <a href="./tourna-1114.html">
+            <a href="./tournaments/tourna-1114.html">
                 <div class="tourna">
                     <img src="./images/tournaments/1114-1.jpg" alt="">
                     <div class="tourna-detail">
@@ -93,7 +93,7 @@
                 </div>
             </a>
 
-            <a href="./tourna-aug5.html">
+            <a href="./tournaments/tourna-aug5.html">
                 <div class="tourna">
                     <img src="./images/tournaments/85-1.jpg" alt="">
                     <div class="tourna-detail">
