--- a/decklists/salamangreat.html
+++ b/decklists/salamangreat.html
@@ -7,33 +7,33 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
     <script src="https://kit.fontawesome.com/d972c1f784.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
     <title>Tournament</title>
 </head>
 <body>
     <ul class="navbar">
         <li class="logo">Lancers HQ</li>
-        <li><a href="index.html">Home</a></li>
+        <li><a href="../index.html">Home</a></li>
         <li>
             <a>Products ▼</a>
             <ul class="dropdown">
-                <li><a href="core_set.html">Core Boxes</a></li>
-                <li><a href="db.html">Deck Builders</a></li>
-                <li><a href="singles.html">Singles</a></li>
-                <li><a href="accessory.html">Accessories</a></li>
+                <li><a href="../core_set.html">Core Boxes</a></li>
+                <li><a href="../db.html">Deck Builders</a></li>
+                <li><a href="../singles.html">Singles</a></li>
+                <li><a href="../accessory.html">Accessories</a></li>
             </ul>
         </li>
         <li>
             <a>Community ▼</a>
             <ul class="dropdown">
-                <li><a href="tourna.html">Tournaments</a></li>
-                <li><a href="decklist.html">Deck List</a></li>
+                <li><a href="../tourna.html">Tournaments</a></li>
+                <li><a href="../decklist.html">Deck List</a></li>
             </ul>
         </li>
     </ul>
-    
+
     <div class="footer">
         <div class="footer-content">
             <div>
@@ -52,7 +52,7 @@
 
     <div class="copyright">
         <p>Lancers is a fan-driven Yu-Gi-Oh! store and community. We are not officially affiliated with Konami Digital Entertainment.
-            © Developed by <a href="about-dev.html">MarNonymous792</a></p>
+            © Developed by <a href="../about-dev.html">MarNonymous792</a></p>
     </div>
 </body>
 </html>
